Fixed extra white space on right side.

--- a/shared/css/style.css
+++ b/shared/css/style.css
@@ -1,11 +1,11 @@
-body {
+html, body {
 	margin: 0;
 	padding: 0;
 	width: 100%;
-    /*min-width: 1025px;*/
     display: flex;
     flex-direction: column;
 	box-sizing: border-box;
+	overflow-x: hidden;
 }
 
 hr {
